--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Global Styles ==================== */
+
 :root {
   --dark-blue: #363f5f;
   --light-green: #49AA26;
@@ -7,6 +9,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-size: 93.75%;
 }
 
 body {
@@ -20,14 +26,35 @@ header {
   text-align: center;
 }
 
-#logo {
-  color: #fff;
-  font-weight: 100;
+button {
+  width: 100%;
+  height: 50px;
+  border: none;
+  color: white;
+  background-color: var(--light-green);
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #3dd705;
 }
 
 .container {
   width: min(90vw, 800px);
   margin: auto;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 h2 {
@@ -36,6 +63,8 @@ h2 {
   color: var(--dark-blue);
   font-weight: 400;
 }
+
+/* Cards ==================== */
 
 #balance {
   margin-top: -8rem;
@@ -57,6 +86,9 @@ h2 {
 .card h3 {
   font-weight: normal;
   font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -68,6 +100,26 @@ h2 {
 .card.total {
   background-color: var(--light-green);
   color: #fff;
+}
+
+/* Table ==================== */
+
+#transaction {
+  display: block;
+  overflow-x: auto;
+}
+.button.new {
+  margin-bottom: .8rem;
+  display: inline-block;
+}
+
+a {
+  color: #49AA26;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3dd705;
 }
 
 #data-table {
@@ -101,6 +153,11 @@ table tbody tr td:first-child{
   border-radius: 0.25rem 0 0 0.25rem;
 }
 
+table thead tr th:last-child,
+table tbody tr td:last-child{
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+
 td.description {
   color: var(--dark-blue)
 }
@@ -113,9 +170,104 @@ td.expense {
   color: #e92929;
 }
 
+/* Modal ==================== */
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 2;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background-color: #F0F2F5;
+  padding: 2.4rem;
+  position: relative;
+  z-index: 1;
+}
+
+/* Form ==================== */
+
+#form {
+  max-width: 500px;
+}
+
+#form h2 {
+  margin-top: 0;
+}
+
+input {
+  border: none;
+  border-radius: 0.2rem;
+  padding: 0.8rem;
+  width: 100%;
+}
+
+.input-group {
+  margin-top: 0.8rem;
+}
+
+.input-group small {
+  opacity: 0.4;
+}
+
+.input-group.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+  width: 48%;
+}
+
+.button.cancel {
+  color: #e92929;
+  border: 2px #e92929 solid;
+  border-radius: 0.25rem;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button.cancel:hover{
+  background-color: #e92929;
+  color: #fff;
+}
+
+/* Footer ==================== */
+
 footer {
   text-align: center;
   padding: 4rem 0 2rem;
   color: var(--dark-blue);
   opacity: 0.6;
+}
+
+/* Responsive ==================== */
+
+@media (min-width: 800px){
+  html {
+    font-size: 87.5%
+  }
+
+  #balance {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 2rem;
+  }
 }
